terraform/nat.tf
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "${var.project_name}-nat-eip"
  }
}

resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id

  subnet_id = values(aws_subnet.public)[0].id


  tags = {
    Name = "${var.project_name}-nat"
  }
}
